--- a/style.css
+++ b/style.css
@@ -62,12 +62,26 @@ a:hover {
     width: 600px;
 }
 
+#gamediv {
+    height: 512px;
+    width: 512px;
+}
+
+#game {
+    border: 2px solid #333333;
+}
+
+#tesseract {
+    width: 500px;
+    height: auto;
+}
+
 /* ======================= Header classes ======================= */
 #image {
     width: 100%;
     height: 250px;
-    background: #000000 url('moon2.jpg') center repeat;
-    background-size: auto;
+    background: #000000 url('assets/prism.jpg') center repeat;
+    background-size: 100%;
 }
 
 ul.navbar {
