--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html {
 
 body {
     background-color: #CCCCCC;
-    min-height: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -55,7 +55,13 @@ a:hover {
 
 .content {
     flex: 1;
-    margin: 0 100px 0 100px;
+    margin: 0 70px 0 70px;
+}
+
+.paper {
+    flex: 1;
+    margin: 20px 100px 20px 100px;
+    background-color: #FFFFFF;
 }
 
 #formInput {
@@ -69,6 +75,11 @@ a:hover {
 #tesseract {
     width: 500px;
     height: auto;
+}
+
+.inputBorder {
+    display: inline-block;
+    border: 2px solid #888888;
 }
 
 .pixelated {
