--- a/style.css
+++ b/style.css
@@ -131,6 +131,18 @@ a:hover {
   clear: both;
 }
 
+.square {
+    width: 50px;
+    height: 50px;
+    background-color: #b5b0ed;
+}
+
+.line {
+    width: 500px;
+    height: 500px;
+    background-color: #FFFFFF;
+}
+
 @media (max-width: 1000px) {
     .column {
         width: 100%;
