Fix engine bug at missile command, add more Events and remove top image

--- a/style.css
+++ b/style.css
@@ -162,6 +162,11 @@ a:hover {
       height: auto;
       width: 100%;
     }
+
+    #ggj {
+      height: auto;
+      width: 100%;
+    }
 }
 
 .inputBorder {
