--- a/mac0499/style.css
+++ b/mac0499/style.css
@@ -1,19 +1,3 @@
-@font-face {
-    font-family: magicPixel;
-    src: local('font/magic-pixel/Magic-Pixel.ttf'),
-         url('font/magic-pixel/Magic-Pixel.ttf');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: magicPixelBold;
-    src: local('font/magic-pixel/Magic-Pixel-Bold.ttf'),
-         url('font/magic-pixel/Magic-Pixel-Bold.ttf');
-    font-weight: bold;
-    font-style: normal;
-}
-
 /* ======================= Body classes ======================= */
 html {
     height: 100%;
@@ -27,16 +11,20 @@ body {
 }
 
 p, ul, input, li{
-    font: 20px magicPixel;
+    font-size: 20px;
     line-height: 1.1;
 }
 
 h2 {
-    font: 32px magicPixelBold;
+    font-size: 30px;
 }
 
 h3 {
-    font: 25px magicPixelBold;
+    font-size: 26px;
+}
+
+h4 {
+    font-size: 22px;
 }
 
 ul.spaced > li {
@@ -79,47 +67,6 @@ a:hover {
     background-color: #b5b0ed;
 }
 
-#formInput {
-    width: 600px;
-}
-
-#game {
-    border: 2px solid #333333;
-}
-
-#julia {
-    border: 2px solid #333333;
-}
-
-#mand {
-    border: 2px solid #333333;
-}
-
-#tesseract {
-    width: 500px;
-    height: auto;
-}
-
-#livrejam {
-  height: auto;
-  width: 500px;
-}
-
-#hackathon {
-  height: auto;
-  width: 500px;
-}
-
-#ludumdare {
-  height: auto;
-  width: 500px;
-}
-
-#perfil {
-  height: auto;
-  width: 300px;
-}
-
 .column {
   float: left;
   width: 50%;
@@ -143,53 +90,16 @@ a:hover {
     background-color: #FFFFFF;
 }
 
-@media (max-width: 1000px) {
-    .column {
-        width: 100%;
-    }
-
-    #livrejam {
-      height: auto;
-      width: 100%;
-    }
-
-    #hackathon {
-      height: auto;
-      width: 100%;
-    }
-
-    #ludumdare {
-      height: auto;
-      width: 100%;
-    }
-
-    #ggj {
-      height: auto;
-      width: 100%;
-    }
-}
-
 .inputBorder {
     display: inline-block;
     border: 2px solid #888888;
-}
-
-.pixelated {
-    image-rendering: optimizeSpeed;             /* Legal fallback */
-    image-rendering: -moz-crisp-edges;          /* Firefox        */
-    image-rendering: -o-crisp-edges;            /* Opera          */
-    image-rendering: -webkit-optimize-contrast; /* Safari         */
-    image-rendering: optimize-contrast;         /* CSS3 Proposed  */
-    image-rendering: crisp-edges;               /* CSS4 Proposed  */
-    image-rendering: pixelated;                 /* CSS4 Proposed  */
-    -ms-interpolation-mode: nearest-neighbor;   /* IE8+           */
 }
 
 /* ======================= Header classes ======================= */
 #image {
     width: 100%;
     height: 250px;
-    background: #000000 url('assets/stars.jpg') repeat; /*By Jakub Novacek*/
+    background: #000000 url('stars.jpg') repeat; /*By Jakub Novacek*/
     background-position: 0% 25%;
     background-size: 100%;
 }
@@ -202,7 +112,11 @@ ul.navbar {
     background-color: #333333;
 }
 
-ul.navbar li {
+ul.navbar li.right {
+    float: right;
+}
+
+ul.navbar li:not(.right) {
     float: left;
 }
 
@@ -257,26 +171,8 @@ ul.navbar li ul li a {
     height: 50px;
 }
 
-/*footer lists*/
-ul.footer {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333333;
-}
-
-ul.footer li {
-    display: block;
-    color: white;
-    text-align: left;
-    padding: 14px 16px;
-    text-decoration: none;
-    float: left;
-}
-
-/*footer table*/
-table.footer {
+div.footer {
+    height: 50px;
     width: 100%;
     background-color: #333333;
 }
