--- a/mac0499/style.css
+++ b/mac0499/style.css
@@ -10,17 +10,24 @@ body {
     flex-direction: column;
 }
 
-p, ul, input, li{
+ul, input, li {
     font-size: 20px;
     line-height: 1.1;
 }
 
+p {
+    font-size: 16px;
+    line-height: 1.5;
+}
+
 h2 {
     font-size: 30px;
+    margin: 0 100px 0 100px;
 }
 
 h3 {
     font-size: 26px;
+    margin: 50px 0 0 0;
 }
 
 h4 {
